--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,20 +1,16 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>Monster-Stop-full</PageTitle>
+<div class="top-bar">
+    <h1 class="neon-text">Monster-Stop</h1>
+    <nav>
+        <a href="/">Home</a>
+        <a href="/admin/products">Products Admin</a>
+        <a href="/admin/categories">Categories Admin</a>
+        <a href="/admin/suppliers">Suppliers Admin</a>
+        <a href="/filterbycategory/1">Filter By Category</a>
+    </nav>
+</div>
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4 auth">
-            <LoginDisplay />
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
+<div class="transparent-panel">
+    @Body
 </div>
