friendly categories filter UI

--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -7,7 +7,7 @@
         <a href="/admin/products">Products Admin</a>
         <a href="/admin/categories">Categories Admin</a>
         <a href="/admin/suppliers">Suppliers Admin</a>
-        <a href="/filterbycategory/1">Filter By Category</a>
+        <a href="/filterbycategory">Filter By Category</a>
     </nav>
 </div>
 
